 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.9rc1

 - [ZBX-4275] made server and proxy try to reconnect to the database upon startup (asaveljevs)
 - [ZBX-4159] fixed problem with generating new ids for historical tables (Vedmak)
 - [ZBX-3988] fixed memory leak in dashboard (Vedmak)
 - [ZBX-3498] removed items from unmonitored hosts from the 'Add graph' and 'Add simple graph' pop-ups in the 'Favourite graphs' widget (pavels)
 - [ZBX-3498] removed the 'Status' column from the 'Add simple graph' pop-up (pavels)
 - [ZBX-2919] fixed custom multiplier becoming 0 when creating an item (pavels)
 - [ZBX-3074] moved the 'Status' column in the item list to the left (pavels)
 - [ZBX-2504] replaced 'Groups' by 'Replace groups' in host mass-update form to avoid confusion (Alexei)
 - [ZBX-4265] fixed host input validation (pavels)
 - [ZBX-4264] fixed zabbix_agent compilation problem on HP-UX (dimir)
 - [ZBX-3504] added a text notification in the maps section when no maps are defined (pavels)
 - [ZBX-3749] escaped HTML entities in the web step "required" field (pavels)
 - [ZBX-3402] disabled "store value" overriding for host items inherited from templates (pavels)
 - [ZBX-4201] fixed template items included in bar reports (Vedmak)
 - [ZBX-4178] fixed compilation on FreeBSD: union has no member named `sival_int' (asaveljevs)
 - [ZBX-4241] added truncation of "ids" table to the database conversion procedure (asaveljevs)
 - [ZBX-2493] improved default messages for actions (Vedmak)
 - [ZBX-2931] fixed dns and ip fields, item statuses and trigger values for default templates (Sasha,asaveljevs)