@@ -316,6 +316,8 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.9rc1
 
+ - [ZBX-4326] api now return error when try create incorrect host profile field (Vedmak)
+ - [ZBX-4323] fixed host profile not created with host using api (Vedmak)
  - [ZBX-4275] made server and proxy try to reconnect to the database upon startup (asaveljevs)
  - [ZBX-4159] fixed problem with generating new ids for historical tables (Vedmak)
  - [ZBX-3988] fixed memory leak in dashboard (Vedmak)
